# rust-nrm

./: .npmrc  Cargo.toml  LICENSE  README.md  registries.toml
benches/: nrm_benchmark.rs  rnrm_benchmark.rs
src/: main.rs
src/utils/: cli.rs  logger.rs  mod.rs  registries.rs  speed_test.rs
tests/: cli_test.rs  registries_test.rs  speed_test.rs
