[package]
name = "rnrm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["fs", "full"] }
toml = "0.8.19"
criterion = "0.5.1"
colored = "2.1.0"


[dev-dependencies]
criterion = "0.5.1"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "rnrm_benchmark"
harness = false

[[bench]]
name = "nrm_benchmark"
harness = false
