[package]
name = "rust-nrm"
version = "0.2.1"
edition = "2021"
description = "A Rust-based NPM Registry Manager for efficiently managing and switching between npm registries"
license = "MIT"
authors = ["BQXBQX"]
repository = "https://github.com/BQXBQX/rnrm"
keywords = ["npm", "registry", "manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rust-nrm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["fs", "full"] }
toml = "0.8.19"
criterion = "0.5.1"
colored = "2.1.0"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"

[dev-dependencies]
criterion = "0.5.1"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "rnrm_benchmark"
harness = false

[[bench]]
name = "nrm_benchmark"
harness = false
